Adds login control with API
